     * Fixed a typo and missing keywords for HTML4 and HTML5 (SF#3365452, BenBE)
     * Fixed a typo in Modula-3 language file (SF#3358216, BenBE)
     * Added missing keywords for MySQL (SF#3290998, ct-bob, BenBE)
     * Added missing keywords for Pascal (SF#3176749, BenBE)
     * Properly detect the keyword that is to be linked (BenBE)
Version 1.0.8.10
  -  Added language files
     * BASCOM AVR (Michal Goralczyk)
     * C: Loadrunner dialect (Stuart Moncrieff)
     * CoffeeScript (Trevor Burnham)
     * EPC (Thorsten Muehlfelder)
     * Euphoria (Nicholas Koceja)
     * Falcon (billykater)
     * HTML5 (Robert Lidberg)
     * LLVM (Azriel Fasten)
     * PL/I (Robert Prins)
     * ProFTPd (Benny Baumann)
     * PyCon (Benny Baumann)
     * UnrealScript (pospi)
     * YAML (Josh Ventura)
  -  Small bugfix in LangCheck when looking for language files
  -  Added '-' to list of RX chars that require explicit escaping (SF#3056454, BenBE)
  -  Minor changes to boundary checks (SF#3077256, BenBE)
  -  Improvements to language files (BenBE)
     * Major rework of the ALGOL68 language file (Neville Dempsey)
     * LangCheck warnings from GO language file (BenBE)
     * Some additions to the Objeck language file (Randy Hollines)
     * Properly highlight infinity as numbers for J (Ric Sherlock)
     * Improved GDB Backtrace language file (Milian Wolff)
     * Updated Liberty BASIC language file (Chris Iverson)
     * Fixed a small issue with detection of division vs. regular expressions
       for ActionScript 3 and JavaScript (Kevin Day)
     * Fixed Escape handling for CSS (SF#3080513, yecril71pl, BenBE)
     * Additional comment styles for SAS (SF#3024708, ahnolds, BenBE)
     * Updated keyword list for TeraTerm (Boris Maisuradze)
     * Incorrect handling of /**/ comments in Javascript (BenBE)
     * Support for mod_upload_progress in Apache Config files (BenBE)
     * Prefix operator handling in F# was broken (BenBE)
     * CDATA handling for html4strict (BenBE)