@@ -221,6 +221,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - VB.NET                 Alan Juden
 - Vedit                  Pauli Lindgren
 - Verilog                Günter Dannoritzer
+- VHDL                   Alexander 'E-Razor' Krause, Kevin Thibedeau
 - VIM Script             Swaroop C H
 - Visual FoxPro          Roberto Armellin
 - Visual Prolog          Thomas Linder Puls
