@@ -43,6 +43,7 @@ Version 1.0.8.11
      * Added missing keywords for MySQL (SF#3290998, ct-bob, BenBE)
      * Added missing keywords for Pascal (SF#3176749, BenBE)
      * Properly detect the keyword that is to be linked (BenBE)
+     * Updated VHDL language file (Kevin Thibedeau)
 Version 1.0.8.10
   -  Added language files
      * BASCOM AVR (Michal Goralczyk)
